# terminally_ASPIRED

./: 1_9ASPIRED.py  ASPIRED_Changes.rtf  LICENSE  McClearPipeline.py  README.md  environment.yml  pyproject.toml  requirements.txt  spectral_reducer.py  terminally_ASPIRED.py
config_files/: defaults.json  trim_bounds.json
example/: SN2024xuo_science.fits
example/BIAS/: a6381002.fits  a6381004.fits  a6381006.fits  a6381007.fits  a6381009.fits  a6381010.fits  a6381012.fits  a6381013.fits  a6381015.fits  a6381018.fits  a6381022.fits  a6381023.fits  a6381025.fits  a6381028.fits  a6381032.fits
example/FLAT/: a6381060.fits  a6381061.fits  a6381062.fits  a6381063.fits  a6381064.fits  a6381065.fits  a6381067.fits  a6381068.fits  a6381069.fits  a6381073.fits  a6381075.fits
example/SN2024xuo/ARC/: arc.fits
src/: README.md  spectral_reducer.py
src/example/BIAS/: a6381003.fits  a6381005.fits  a6381014.fits  a6381016.fits  a6381017.fits  a6381021.fits  a6381030.fits
src/example/FLAT/: a6381066.fits  a6381074.fits  a6381077.fits  a6381078.fits
src/terminally_ASPIRED/: __init__.py  cli.py  spectral_reducer.py
src/terminally_ASPIRED/example/: HILT600_arc.fits  HILT600_science.fits
src/terminally_ASPIRED/example/BIAS/: a6381001.fits  a6381020.fits  a6381024.fits  a6381027.fits  a6381029.fits  a6381031.fits
src/terminally_ASPIRED/example/FLAT/: a6381070.fits  a6381072.fits
terminally_ASPIRED/: environment.yml  spectral_reducer.py  terminally_ASPIRED.py
terminally_ASPIRED/example/BIAS/: a6381008.fits  a6381011.fits  a6381019.fits  a6381026.fits
terminally_ASPIRED/example/FLAT/: a6381059.fits  a6381071.fits  a6381076.fits
