[tool.poetry]
name = "terminally-ASPIRED"
version = "0.1.6"
description = "CLI for spectral reduction for the SAAO 74 inch using ASPIRED backend"
authors = [
    "Francois Campher <francois@blackgem.org>",
    "Lloyd Landsberg <lloyd@blackgem.org"
]
license = "MIT"
readme = "README.md"
packages =[{ include = "terminally_ASPIRED"}]

[tool.poetry.dependencies]
python = "3.11.*"
astroscrappy = "*"

[tool.poetry.scripts]
tA = "terminally_ASPIRED.terminally_ASPIRED:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"