[tool.poetry]
name = "terminally-aspired"
version = "0.3.5"
description = "CLI for spectral reduction for the SAAO 74 inch using ASPIRED backend"
authors = [
    "Francois Campher <francois@blackgem.org>",
    "Lloyd Landsberg <lloyd@blackgem.org>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "terminally_ASPIRED", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"

setuptools = "*"
jmespath = "*"
astroscrappy = ">=1.1"
astropy = ">=4.3"
ccdproc = ">=2.3,!=2.4.0"
kaleido = ">=0.2"
matplotlib = ">=3.0.3"
numpy = ">=1.18"
plotly = ">=5.6"
pynverse = ">=0.1.4"
scipy = ">=1.7"
spectresc = ">=1.0.1"
specutils = ">=1.8"
statsmodels = ">=0.13"
tqdm = ">=4.48.0"

[tool.poetry.scripts]
tA = "terminally_ASPIRED.cli:main"
terminally-aspired = "terminally_ASPIRED.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
